--- a/deployment/aws/Pulumi.dev.yaml
+++ b/deployment/aws/Pulumi.dev.yaml
@@ -1,3 +1,5 @@
+environment:
+  - aws/dev
+  - portfolio-frontend/dev
 config:
-  aws:region: us-east-1
-  pulumi:template: aws-typescript
+  aws:region: ap-southeast-1
