--- a/workspace/apps/portfolio/tsconfig.json
+++ b/workspace/apps/portfolio/tsconfig.json
@@ -10,18 +10,10 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": "./src",
     "paths": {
-      "@features/*": [
-        "app/features/*"
-      ],
-      "@layouts/*": [
-        "app/layouts/*"
-      ],
-      "@core/*": [
-        "app/core/*"
-      ],
-      "@shared/*": [
-        "app/shared/*"
-      ]
+      "@features/*": ["app/features/*"],
+      "@layouts/*": ["app/layouts/*"],
+      "@core/*": ["app/core/*"],
+      "@shared/*": ["app/shared/*"]
     }
   },
   "files": [],
