✨ (.github/workflows): migrate deployment workflow to new file ✨ (.github/workflows): create pull request workflow ✨ (Taskfile.deployment.yml): add ci install dependencies task

--- a/Taskfile.deployment.yml
+++ b/Taskfile.deployment.yml
@@ -1,5 +1,8 @@
 version: '3'
 tasks:
+  installDeps:ci:
+    cmds:
+      - cd ./workspace && npm ci
   build:
     desc: 'Build project'
     cmds:
