--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -13,6 +13,12 @@ on:
           - dev
           - prod
         default: dev
+env:
+  ESC_ACTION_OIDC_AUTH: true
+  ESC_ACTION_OIDC_ORGANZATION: cirius-go
+  ESC_ACTION_OIDC_REQUESTED_TOKEN_TYPE: urn:pulumi:token-type:access_token:organization
+  ESC_ACTION_ENVIRONMENT: cirius-go/portfolio-frontend/dev
+  ESC_ACTION_EXPORT_ENVIRONMENT_VARIABLES: AWS_ACCESS_KEY_ID,AWS_SECRET_ACCESS_KEY,AWS_SESSION_TOKEN
 permissions:
   id-token: write
   contents: read
@@ -31,16 +37,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Authenticate with Pulumi Cloud
-        uses: pulumi/auth-actions@v1
-        with:
-          organization: cirius-go
-          requested-token-type: urn:pulumi:token-type:access_token:organization
-      - name: Install and inject ESC environment variables
+      - name: Fetch secrets from ESC
         id: esc-secrets
         uses: pulumi/esc-action@v1
-        with:
-          environment: cirius-go/portfolio-frontend/dev
       - name: Install go-task/task to run Taskfile commands
         uses: arduino/setup-task@v2
       - name: Setup Node.js
