--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -16,6 +16,7 @@ on:
 env:
   ESC_ACTION_OIDC_AUTH: true
   ESC_ACTION_CLOUD_URL: https://api.pulumi.com
+  OIDC_ORGANIZATION: cirius-go
   ESC_ACTION_OIDC_ORGANZATION: cirius-go
   ESC_ACTION_OIDC_REQUESTED_TOKEN_TYPE: urn:pulumi:token-type:access_token:organization
   ESC_ACTION_ENVIRONMENT: cirius-go/portfolio-frontend/dev
