--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -17,6 +17,7 @@ env:
   ESC_ACTION_CLOUD_URL: https://api.pulumi.com
   ESC_ACTION_OIDC_ORGANZATION: cirius-go
   ESC_ACTION_ENVIRONMENT: cirius-go/portfolio-frontend/dev
+  PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
   ESC_ACTION_EXPORT_ENVIRONMENT_VARIABLES: AWS_ACCESS_KEY_ID,AWS_SECRET_ACCESS_KEY,AWS_SESSION_TOKEN
 permissions:
   id-token: write
