--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -17,8 +17,11 @@ env:
   ESC_ACTION_CLOUD_URL: https://api.pulumi.com
   ESC_ACTION_OIDC_ORGANZATION: cirius-go
   ESC_ACTION_ENVIRONMENT: cirius-go/portfolio-frontend/dev
+  PULUMI_STACK_NAME: cirius-go/portfolio-frontend/dev
   PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
   ESC_ACTION_EXPORT_ENVIRONMENT_VARIABLES: AWS_ACCESS_KEY_ID,AWS_SECRET_ACCESS_KEY,AWS_SESSION_TOKEN
+  DEPLOYMENT_WORKING_DIRECTORY: deployment/aws
+  APPS_WORKING_DIRECTORY: workspace
 permissions:
   id-token: write
   contents: read
@@ -35,13 +38,21 @@ jobs:
       matrix:
         project: [cms, portfolio]
     steps:
+      # Turnstyle is used to prevent multiple push jobs from running at the
+      # same time. We limit it to push jobs to allow PR jobs to run
+      # concurrently.
+      - name: Turnstyle
+        if: ${{ github.event_name == 'push' }}
+        uses: softprops/turnstyle@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Fetch secrets from ESC
-        id: esc-secrets
-        uses: pulumi/esc-action@v1
-        with:
-          oidc-organization: cirius-go
+      # - name: Fetch secrets from ESC
+      #   id: esc-secrets
+      #   uses: pulumi/esc-action@v1
+      #   with:
+      #     oidc-organization: cirius-go
       - name: Install go-task/task to run Taskfile commands
         uses: arduino/setup-task@v2
       - name: Setup Node.js
@@ -62,8 +73,17 @@ jobs:
           key: ${{ runner.os }}-npm-deployment-${{ hashFiles('./deployment/aws/package-lock.json') }}
           restore-keys: ${{ runner.os }}-npm-deployment-
       - name: Install dependencies
-        run: cd workspace && npm ci
+        run: npm ci
+        working-directory: ${{ env.APPS_WORKING_DIRECTORY }}
+        # working-directory: 
       - name: Install deployment dependencies
-        run: cd deployment/aws && npm ci
+        run: npm ci
+        working-directory: ${{ env.DEPLOYMENT_WORKING_DIRECTORY }}
       - name: Build ${{ matrix.project }}
         run: task build:${{ env.TARGET }} -- ${{ matrix.project }}
+      - name: Apply infrastructure update
+        uses: pulumi/actions@v3
+        with:
+          command: up
+          stack-name: ${{ env:PULUMI_STACK_NAME }}
+          work-dir: ${{ env.DEPLOYMENT_WORKING_DIRECTORY }}
