🐛 (.github/workflows/deployment.yaml): fix env var syntax in github workflow file

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -85,5 +85,5 @@ jobs:
         uses: pulumi/actions@v3
         with:
           command: up
-          stack-name: ${{ env:PULUMI_STACK_NAME }}
+          stack-name: ${{ env.PULUMI_STACK_NAME }}
           work-dir: ${{ env.DEPLOYMENT_WORKING_DIRECTORY }}
