🔧 (.github/workflows/preview-pulumi.yml): Rename workflow and job to align with project naming conventions

--- a/.github/workflows/preview-pulumi.yml
+++ b/.github/workflows/preview-pulumi.yml
@@ -1,4 +1,4 @@
-name: Preview cirius-go/portfolio-frontend/dev
+name: Preview Infra
 on:
   pull_request:
     types: [opened, edited, reopened, synchronize]
@@ -14,8 +14,8 @@ env:
   DEPLOYMENT_WORKING_DIRECTORY: deployment/aws
   APPS_WORKING_DIRECTORY: workspace
 jobs:
-  pulumi:
-    name: Pulumi
+  preview:
+    name: Preview Infra
     runs-on: ubuntu-latest
     steps:
       - name: Turnstyle
