--- a/.github/workflows/preview-pulumi.yml
+++ b/.github/workflows/preview-pulumi.yml
@@ -24,6 +24,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/checkout@v2
+      - name: Install go-task/task to run Taskfile commands
+        uses: arduino/setup-task@v2
       - name: Cache deployment node modules
         uses: actions/cache@v4
         with:
