🔧 (.github/workflows/preview-pulumi.yml): add turnstyle and env variable TARGET

--- a/.github/workflows/preview-pulumi.yml
+++ b/.github/workflows/preview-pulumi.yml
@@ -17,9 +17,10 @@ jobs:
   preview:
     name: Preview Infra
     runs-on: ubuntu-latest
+    env:
+      TARGET: dev
     steps:
       - name: Turnstyle
-        if: ${{ github.event_name == 'push' }}
         uses: softprops/turnstyle@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
