--- a/.github/workflows/preview-pulumi.yml
+++ b/.github/workflows/preview-pulumi.yml
@@ -27,6 +27,13 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install go-task/task to run Taskfile commands
         uses: arduino/setup-task@v2
+      - name: Cache node modules
+        uses: actions/cache@v4
+        with:
+          path: ./workspace/node_modules
+          key: ${{ runner.os }}-npm-apps-${{ hashFiles('./workspace/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-apps-
       - name: Cache deployment node modules
         uses: actions/cache@v4
         with:
@@ -39,7 +46,10 @@ jobs:
           node-version: 22.x
       - run: npm ci
         working-directory: ${{ env.DEPLOYMENT_WORKING_DIRECTORY }}
-      - name: Build ${{ matrix.project }}
+      - name: Install dependencies
+        run: npm ci
+        working-directory: ${{ env.APPS_WORKING_DIRECTORY }}
+      - name: Build
         run: task build:${{ env.TARGET }} -- cms,portfolio
       - name: PR previews
         uses: pulumi/actions@v3
